--- a/Prepocesamiento.ipynb
+++ b/Prepocesamiento.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prepocesamiento del texto"
+    "# Prepocesamiento de texto\n",
+    "En este Notebook se presenta el procesamiento de informacion realizado para implementar el proyecto \"Mex-IA: Chatbot basado en RAG enfocado al apoyo legal del ciudadano\" sometido al concurso \"Acelerando Mexico con Inteligencia Articfial\", organizado por Intel.\n",
+    "\n",
+    "El objetivo de este Notebook es identificar y extraer la informacion de cada uno de los articulos incluidos en el documento oficial de la constitucion Mexicana. Para lograr dicho objetivo, se optop por usar Expresiones Regulares (RE, Regular Expressions) para identificar el inicio y final de cada aritculo. Posteriormente, Se utiliza la libreria Llama Index para "
    ]
   },
   {
@@ -159,7 +162,10 @@
     "from llama_index.core import StorageContext\n",
     "\n",
     "# api key\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "key = ''\n",
+    "with open('openai_key.txt', 'r') as t:\n",
+    "    key = t.read()\n",
+    "os.environ[\"OPENAI_API_KEY\"] = key\n",
     "\n",
     "# configuracion del modelo y embeding\n",
     "embed_model = OpenAIEmbedding(model=\"text-embedding-3-small\")\n",
