--- a/Prepocesamiento.ipynb
+++ b/Prepocesamiento.ipynb
@@ -7,14 +7,22 @@
     "# Prepocesamiento de texto\n",
     "En este Notebook se presenta el procesamiento de informacion realizado para implementar el proyecto \"Mex-IA: Chatbot basado en RAG enfocado al apoyo legal del ciudadano\" sometido al concurso \"Acelerando Mexico con Inteligencia Articfial\", organizado por Intel.\n",
     "\n",
-    "El objetivo de este Notebook es identificar y extraer la informacion de cada uno de los articulos incluidos en el documento oficial de la constitucion Mexicana. Para lograr dicho objetivo, se optop por usar Expresiones Regulares (RE, Regular Expressions) para identificar el inicio y final de cada aritculo. Posteriormente, Se utiliza la libreria Llama Index para "
+    "El objetivo de este Notebook es identificar y extraer la informacion de cada uno de los articulos incluidos en el documento oficial de la constitucion Mexicana. Para lograr dicho objetivo, se optop por usar Expresiones Regulares (RE, Regular Expressions) para identificar el inicio y final de cada aritculo. Posteriormente, Se utiliza la libreria Llama Index para transformar el contenido de cada articulo en una representacion numerica atrves de la evaluacion del texto en Embedings.\n",
+    "\n",
+    "El contenido del Notebook se divide como sigue:\n",
+    "1. Extraccion del contenido de articulos\n",
+    "2. Transformacion a representacion numerica\n",
+    "3. Validacion de la lectura de articulos en su representacion numerica"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extracción del contenido de artículos"
+    "## 1. Extracción del contenido de artículos\n",
+    "A continuacion se implementa una funcion para procesar el contenido de cada pagina del documento de la constitucion en pdf. El objetivo de esta funcion es eliminar informacion redundante, como lo son el pie de pagina.\n",
+    "\n",
+    "Con esta funcion se lee cada pagina del archivo y se extrae la informacion usando expresiones regulares para detectar el principio y fin de cada articulo. Una vez extraida la informacion se almacena el contenido de cada articulo en archivos .txt, los cuales se encuentran en la carpeta [articulos](articulos)."
    ]
   },
   {
@@ -34,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# funcion para eliminar el contenido inecesario del pie de cada pagina\n",
     "def clean_text(page, split_sent=None):\n",
     "    text = page.extract_text()\n",
     "    splits = re.split(r\"(\\d+\\sde\\s382)\", text)\n",
@@ -74,7 +83,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Escritura de archivos Index"
+    "## 2. Transformacion a representacion numerica\n",
+    "Posteriormente se transforma la informacion extraida de cada articulo a una reresentacion numerica, ya que la tecnica RAG usada en la implementacion del modelo propuesto requiere este formato.\n",
+    "\n",
+    "En primer lugar se define la configuracion a usar, incluyendo el modelo de lenguaje (`gpt-4o-mini`) y el tipo de embeding (`text-embedding-3-small`). Note que esta etapa del proyecto requiere de un API key de OPEN AI para usar los modelos preentrenados, para mas informacion consulte [link](link...). Tambien es necesario crear una sesion de Chroma DB para alamcenar el resultado de la transformacion numerica. Este paso es fundamental, ya que la evaluacion de la base de datos consume recursos del API, por lo cual es importante alamcenar el resultado con el fin de evitar costos incesesarios cada vez que se requiera usar el modelo."
    ]
   },
   {
@@ -115,6 +127,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con la configuracion definida previmante, se transforma el contenido de cada articulo en una representacion numerica y se alamcena el resultado en la carpeta [index_data](index_data)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -143,7 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Volver a leer información de Index"
+    "## 3. Validacion de la lectura de articulos en su representacion numerica\n",
+    "Por ultimo, se muestra el proceso necesario para recuperar la representacion numerica del contenido de cada articulo:"
    ]
   },
   {
@@ -183,6 +203,13 @@
     "index = VectorStoreIndex.from_vector_store(\n",
     "    vector_store, storage_context=storage_context\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente se muestra un ejemplo para verificar que el contenido de cada articulo se almaceno correctamente."
    ]
   },
   {
