--- a/Ejemplos.ipynb
+++ b/Ejemplos.ipynb
@@ -21,8 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Implementacion\n",
-    "La implementacion del modelo porpuesto se muetra a continuacion:"
+    "## Implementacion del modelo Mex-IA\n",
+    "La implementacion del modelo propuesto se muetra a continuacion. Dicha implemetacion cosndiera los siguientes puntos:\n",
+    "1. Definicion del modelo de lenguaje y tipo de embedding a usar.\n",
+    "2. Recuperacion de la representacion vectorial de la informacion de los articulos de la constitucion Mexicana.\n",
+    "3. Definicion del motor de recuperacion de informacion y el modelo de consultas.\n",
+    "4. Implemetacion de de consultas considerando el siguiente esquema para persinolzar el prompt evaluado por el modelo de lenguaje:"
    ]
   },
   {
@@ -69,6 +73,7 @@
     "            index=self.index,\n",
     "            similarity_top_k=5,\n",
     "        )\n",
+    "        \n",
     "        #definicion del motor de busqueda\n",
     "        self.query_engine = self.index.as_query_engine()\n",
     "\n",
@@ -117,40 +122,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El  modelo puede instanciarse importando el archivo VVV, y posteriormente definiendo una instancia del ChatBot:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pprint\n",
-    "\n",
     "# se instancia al chatbot\n",
     "chat = MexIA_ChatBot()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A continuacion se muestran 15 ejemplos usados para evaluar el desempeno del modelo:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Los trabajadores gozarán de vacaciones que nunca serán menores de veinte '\n",
-      " 'días al año. Fuente: Artículo 123, fracción III.')\n"
+      "CONSULTA: ¿Cual es el conocimiento basico que debo tener como mexicano?\n",
+      "Respuesta: Como mexicano, es fundamental conocer tus obligaciones, que incluyen asegurar que tus hijos reciban educación, participar en la instrucción cívica y militar, alistarte en los cuerpos de reserva, y contribuir a los gastos públicos de manera proporcional. Además, es importante entender tus derechos humanos, que son garantizados y protegidos por la Constitución y los tratados internacionales. Fuente: Artículo 31 y Artículo 1o.\n",
+      "\n",
+      "CONSULTA: ¿Cuales son mis derechos como trabajador?\n",
+      "Como trabajador, tienes varios derechos fundamentales, entre los cuales se incluyen:\n",
+      "\n",
+      "1. Derecho a un trabajo digno y socialmente útil.\n",
+      "2. Jornada máxima de trabajo de ocho horas diarias y siete horas nocturnas.\n",
+      "3. Descanso semanal de al menos un día con goce de salario.\n",
+      "4. Vacaciones anuales de no menos de veinte días.\n",
+      "5. Salario mínimo que no podrá ser inferior al establecido por la ley.\n",
+      "6. Igualdad de salario por trabajo igual, sin distinción de sexo.\n",
+      "7. Derecho a la capacitación y adiestramiento por parte del empleador.\n",
+      "8. Protección contra despidos injustificados, con derecho a reinstalación o indemnización.\n",
+      "9. Derecho a asociarse y formar sindicatos para la defensa de sus intereses.\n",
+      "10. Acceso a seguridad social, incluyendo atención médica y prestaciones por accidentes o enfermedades laborales.\n",
+      "\n",
+      "Fuente: Artículo 123 de la Constitución de México.\n",
+      "\n",
+      "CONSULTA: ¿En la constitucion, que leyes cuidan la naturaleza?\n",
+      "Las leyes que cuidan la naturaleza están relacionadas con la propiedad de las aguas, los recursos naturales y la protección de tierras. La Constitución establece que la propiedad de la Nación incluye las aguas de los mares territoriales, lagos, ríos y sus afluentes, así como la regulación de su uso y explotación. También se reconoce la propiedad de la tierra por parte de los núcleos de población ejidales y comunales, protegiendo su integridad para actividades productivas y el asentamiento humano.\n",
+      "\n",
+      "Fuente: Artículo 27 y Artículo 73 de la Constitución de México.\n",
+      "\n",
+      "CONSULTA: ¿Como esta compuesta la constitucion, que temas abarca?\n",
+      "La Constitución está compuesta por varios artículos que abarcan una amplia gama de temas, incluyendo derechos fundamentales, la organización del Estado, la división de poderes, la regulación de los derechos de autor, la contabilidad gubernamental, y la resolución de controversias constitucionales. También incluye disposiciones sobre la legislación en materia de seguridad, educación, y la participación de las entidades federativas en diversos asuntos. \n",
+      "\n",
+      "Fuente: Artículo 73, Artículo 105.\n",
+      "\n",
+      "CONSULTA: ¿Bajo que circunstancias me puede detener la policia?\n",
+      "La policía puede detener a una persona en el momento en que esté cometiendo un delito o inmediatamente después de haberlo cometido, debiendo ponerla sin demora a disposición de la autoridad civil más cercana. También se puede ordenar la detención en casos urgentes, cuando se trate de un delito grave y exista el riesgo de que la persona se sustraiga a la acción de la justicia, siempre que no se pueda acudir ante la autoridad judicial por razones de hora, lugar o circunstancia. \n",
+      "\n",
+      "Fuente: Artículo 16.\n",
+      "\n",
+      "CONSULTA: ¿La constitucion ampara mi derecho a la educacion?\n",
+      "El derecho a la educación está garantizado para toda persona, y el Estado tiene la responsabilidad de impartir y garantizar diversos niveles educativos, incluyendo la educación básica, que es obligatoria. Además, se establece que la educación debe ser universal, inclusiva, pública, gratuita y laica. \n",
+      "\n",
+      "Fuente: Artículo 3o de la Constitución de México.\n",
+      "\n",
+      "CONSULTA: ¿Cuál es la diferencia entre un delito y una falta cívica?\n",
+      "Los delitos son conductas tipificadas en la legislación penal que implican una sanción penal, que puede incluir penas privativas de libertad o multas, y que afectan a la sociedad en su conjunto. Por otro lado, las faltas cívicas son infracciones menores que se sancionan administrativamente y no implican necesariamente una pena privativa de libertad. Estas últimas pueden resultar en amonestaciones, multas o sanciones administrativas. \n",
+      "\n",
+      "Fuente: Artículo 109 y Artículo 111 de la Constitución de México.\n",
+      "\n",
+      "CONSULTA: ¿Que es un delito doloso?\n",
+      "Respuesta: Un delito doloso es aquel en el que el autor actúa con intención de causar un daño o de cometer un acto ilícito, es decir, sabe que su conducta es delictiva y busca directamente el resultado delictivo. Fuente: No se especifica en los artículos proporcionados.\n",
+      "\n",
+      "CONSULTA: ¿Que requisitos debe cumplir una pesona para obtener la nacionalidad mexicana?\n",
+      "Respuesta: Para obtener la nacionalidad mexicana por naturalización, una persona debe cumplir con los siguientes requisitos: ser extranjero y obtener de la Secretaría de Relaciones una carta de naturalización, o ser extranjero que contraiga matrimonio con un mexicano y establezca su domicilio en el territorio nacional, cumpliendo con los demás requisitos que la ley señale. Fuente: Artículo 30.\n",
+      "\n",
+      "CONSULTA: ¿Que impuestos debo pagar por tener una propiedad?\n",
+      "Los propietarios de bienes inmuebles deben pagar contribuciones que incluyen impuestos, derechos y contribuciones de mejoras, así como las tarifas que establezcan las legislaturas estatales. Los ayuntamientos son responsables de proponer estas cuotas y tarifas aplicables a la propiedad inmobiliaria. Fuente: Artículo 115.\n",
+      "\n",
+      "CONSULTA: ¿Que pasaria si no pago impuestos?\n",
+      "Respuesta: Si no se realizan los pagos de impuestos, se pueden generar sanciones administrativas, que incluyen multas y recargos. Además, la falta de pago puede dar lugar a procedimientos legales que pueden culminar en acciones de cobro por parte de las autoridades fiscales. Fuente: Artículo 109.\n",
+      "\n",
+      "CONSULTA: ¿Que articulo de la constitucion respalda mi libertad de expresion?\n",
+      "La libertad de expresión está respaldada por el derecho a manifestar ideas sin ser objeto de inquisición, salvo en casos que atenten contra la moral, la vida privada o los derechos de terceros, así como en situaciones que provoquen delitos o perturben el orden público. Fuente: Artículo 6 de la Constitución de México.\n",
+      "\n",
+      "CONSULTA: ¿Cuales son los derechos y obligaciones de mis padres?\n",
+      "Respuesta: Los padres tienen la obligación de preservar y exigir el cumplimiento de los derechos de sus hijos, así como de asegurar que sus hijos concurran a las escuelas para recibir la educación obligatoria. Además, tienen el derecho de participar en el proceso educativo de sus hijos, velando por su bienestar y desarrollo. Fuente: Artículo 4o y Artículo 31 de la Constitución de México.\n",
+      "\n",
+      "CONSULTA: ¿Que documentos necesito para registar a mi bebe?\n",
+      "Respuesta: Para registrar a tu bebé, necesitarás la primera copia certificada del acta de registro de nacimiento, que debe ser expedida gratuitamente por la autoridad competente. Fuente: Artículo 4o.\n",
+      "\n",
+      "CONSULTA: ¿Los migrantes tienen derecho a votar?\n",
+      "Respuesta: Los migrantes no tienen derecho a votar en las elecciones populares en México, ya que este derecho está reservado para los ciudadanos mexicanos. Los derechos de la ciudadanía, que incluyen el derecho a votar, están específicamente establecidos en el artículo 35 de la Constitución. Fuente: Artículo 35.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "answ = chat.get_answer('los trabajadores tienen derecho a vacaciones?')\n",
-    "pprint.pprint(answ)"
+    "querys = [\"¿Cual es el conocimiento basico que debo tener como mexicano?\", \"¿Cuales son mis derechos como trabajador?\",\n",
+    "          \"¿En la constitucion, que leyes cuidan la naturaleza?\", \"¿Como esta compuesta la constitucion, que temas abarca?\",\n",
+    "          \"¿Bajo que circunstancias me puede detener la policia?\", \"¿La constitucion ampara mi derecho a la educacion?\",\n",
+    "          \"¿Cuál es la diferencia entre un delito y una falta cívica?\",\"¿Que es un delito doloso?\",\n",
+    "          \"¿Que requisitos debe cumplir una pesona para obtener la nacionalidad mexicana?\",\n",
+    "          \"¿Que impuestos debo pagar por tener una propiedad?\", \"¿Que pasaria si no pago impuestos?\",\n",
+    "          \"¿Que articulo de la constitucion respalda mi libertad de expresion?\",\n",
+    "          \"¿Cuales son los derechos y obligaciones de mis padres?\",\"¿Que documentos necesito para registar a mi bebe?\",\n",
+    "          \"¿Los migrantes tienen derecho a votar?\"]\n",
+    "\n",
+    "for qi in querys:\n",
+    "    print(f'CONSULTA: {qi}')\n",
+    "    anws = chat.get_answer(qi)\n",
+    "    print(f'{anws}\\n')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "tfGPU",
    "language": "python",
    "name": "python3"
   },
@@ -164,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
